# IngredientIQ

./: index.html  package-lock.json  package.json  tailwind.config.js
backend/: notes.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/Schema/: schema.py
backend/app/data/: annex2.csv  annex3.csv  annex5.csv  ingredient_aliases.py
backend/app/db/: database.py
backend/app/models/: schema.py
backend/app/routes/: analyze.py
backend/app/services/: agent.py  analyse_services.py  extractor.py  get_retriver.py  pubchem.py  vectorDB.py
src/: App.jsx  index.css
src/components/Footer/: Footer.jsx
src/components/Navbar/: Navbar.jsx
src/components/SafetyGauge/: SafetyGauge.jsx
src/pages/Analyzing/: AnalyzingPage.jsx
src/pages/Home/: HomePage.jsx
src/pages/Report/: ReportPage.jsx
