[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "flask-cors>=6.0.2",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langserve>=0.3.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "playwright>=1.40.0",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
    "httpx>=0.28.1",
    "langchain-pinecone>=0.2.13",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
]
